<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/GoToSecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_second_activity" />

    <Button
        android:id="@+id/BtnSystemActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_page_de_google" />

    <Button
        android:id="@+id/goToDataActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_data_activity" />
</LinearLayout>